[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "p115center-sdk"
version = "0.0.13"
description = "115 网盘中心化服务 Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DDSRem", email = "ddsrem@xnn.ee" },
]
keywords = ["115", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx",
    "orjson",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/DDSRem-Dev/p115center-sdk"
Repository = "https://github.com/DDSRem-Dev/p115center-sdk"
Issues = "https://github.com/DDSRem-Dev/p115center-sdk"

[tool.maturin]
module-name = "p115center._sign_impl"
python-source = "."
